# app/app/types/login.ts
@@ -1,5 +1,4 @@
-import type { components } from "./api"
+import type { components } from './api';
 
-type LoginFormSchema = components["schemas"]
-
-export type LoginFormData = LoginFormSchema["Body_login_users_login_post"]
+export type LoginFormData = components['schemas']['LoginFormData'];
+export type LoginResponse = components['schemas']['LoginResponse'];
